array.island.Island.scala.error
Compilation error:
Island:7: error: reassignment to val
      num = num + 1
          ^Island:10: error: type mismatch;
 found   : Array[Int]
 required: Int
  return num
         ^